modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_external_a.notest.gd
class_name TestCyclicRefExternalA

final B = preload("cyclic_ref_external.gd")

var v = B.v
